# cbtrader

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
src/cbtrader/: app.py  main.py  models.py
src/cbtrader/api/: auth.py  feed.py  rest.py
src/cbtrader/widgets/: balance.py  chart.py  deriv_balance.py  deriv_orderform.py  deriv_ticker.py  openorders.py  orderbook.py  orderform.py  orderhistory.py  portfolio.py  positions.py  ticker.py  trades.py
